Removed shifting bug on hover

--- a/app/src/containers/signUp/signUp.scss
+++ b/app/src/containers/signUp/signUp.scss
@@ -75,6 +75,8 @@ $white: #FFFFFF;
             flex: 1;
         }
 
+        height: 60px;
+
         &.input:invalid {
           color: $error;
         }
